# mlxmolkit

./: .gitignore  README.md  bench_batch.py  bench_bfgs.py  bench_compiled_vs_jit.py  bench_conformers.py  bench_head_to_head.py  bench_metal.py  bench_metal_vs_numpy.py  bench_mmff_100mol.py  bench_multi_mol.py  bench_native_vs_mlx.py  bench_profile_multi.py  compare_energies.py  compare_rdkit_mlx.py  debug_bintgs.py  debug_hcore_comparison.py  debug_overlap.py  debug_pyseqm_hcore.py  debug_two_elec.py  extract_pm3.py  extract_pm6.py  extract_pyseqm_detail.py  extract_pyseqm_matrices.py  pyproject.toml  run_opt_comparison.py  run_pyseqm_reference.py  run_training_comparison.py  test_batch.py  test_cosmo.py  test_cosmo_methods.py  test_methods.py  test_overlap_vs_pyseqm.py  test_pipeline.py  test_pm6ml.py  test_pyseqm_ref.py  test_scf_energy.py  test_vle.py  tune_cosmo_alpha.py
data/: benchmark_1000_smiles.csv
docs/: API_LOGIC.md  CROSS_TOOLKIT_VALIDATION.md  OPENCHEESE_ARCHITECTURE.md  OPENCHEESE_LGMOL_FORCE2GEO_NOTES.md
examples/: conf3d_example.py
metal/: fused_pipeline.h  fused_pipeline.mm  fused_tanimoto.metal  fused_tanimoto.metallib  libfused_metal.dylib
mlxmolkit/: __init__.py  bfgs_batch_metal.py  bfgs_metal.py  butina.py  butina_metal.py  charge_model.py  cheese.py  cheese_embedding.py  conformer_metal.py  conformer_pipeline.py  conformer_pipeline_v2.py  connolly.py  cosine_dense.py  dg_energy_metal.py  dg_extract.py  dg_minimize_metal.py  energy_distgeom.py  erg_features.py  esp_resp.py  etk_energy_metal.py  etk_extract.py  etk_metal.py  etk_minimize_metal.py  fp_uint32.py  fused_tanimoto_nlist.py  mmff_batch_optimizer.py  mmff_bfgs_header.metal  mmff_bfgs_source_tg.metal  mmff_dirlbfgs_source_tg.metal  mmff_energy_mlx.py  mmff_energy_native.py  mmff_energy_vectorized.py  mmff_lbfgs_source_tg.metal  mmff_metal_kernel.py  mmff_metal_optimizer.py  mmff_minimize.py  mmff_mlx_optimizer.py  mmff_native_batch_optimizer.py  mmff_native_batch_optimizer_v2.py  mmff_optimizer.py  (+9 more)
models/: schnet_charge_50k.npz  schnet_charge_hard.npz
opencheese/: __init__.py  descriptors.py  embedding.py  gnn_ma.py  graphmvp.py  optimizers.py  surface.py
(+140 files in other folders)
